update profile of Ding.Z update site logo & icon update index

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,8 @@ theme:
   name: material
   font: false
   language: zh
+  logo: logo.png
+  favicon: logo.png
   features:
     - navigation.tracking
   palette:
